--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -108,4 +108,23 @@ a.signup_button {
   float: none;
 }
 
+/* User show page */
+
+table.profile {
+  width: 100%;
+  margin-bottom: 0;
+}
+
+td.main {
+  width: 70%;
+  padding: 1em;
+}
+
+td.sidebar {
+  width: 30%;
+  padding: 1em;
+  vertical-align: top;
+  background: #ffc;
+}
+
 
